kube/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flipr
  namespace: flipr
spec:
  selector:
    app: flipr
  ports:
    - name: http
      port: 80
      targetPort: http
